@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.657 2006/06/25 22:24:28 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.658 2006/07/10 02:54:10 codeman Exp $
+
+  9 July 2006; Preston Cody <codeman@gentoo.org>
+  src/GLIGenDialog.py
+  make lilo only show up for x86 if non-networkless
 
   25 Jun 2006; Preston Cody <codeman@gentoo.org>
   src/GLIGenDialog.py
